NATTQA-ENV/force-app/main/default/objects/NATT_Inventory__c/NATT_Inventory__c.object-meta.xml
<CustomObject>
    <description>Corresponds with the WOD_2_Inventory__c (Unit Information) object in Tavant</description>
    <label>NATT Inventory</label>
    <nameField>
        <label>Inventory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NATT_Inventory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>