NATTQA-ENV/force-app/main/default/objects/NATT_Inventory__c/fields/NATT_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>NATT_Business_Unit__c</fullName>
    <description>Drives the rules engine. This value will be TT for Truck/Trailer</description>
    <label>Business Category Configuration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>