NATTQA-ENV/force-app/main/default/objects/NATT_Inventory__c/fields/NATT_Extended_Warranty_Code__c.field-meta.xml
<CustomField>
    <fullName>NATT_Extended_Warranty_Code__c</fullName>
    <description>BluEdge Quote ID</description>
    <label>Extended Warranty Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>