NATTQA-ENV/force-app/main/default/objects/NATT_Inventory__c/fields/NATT_Install_Date__c.field-meta.xml
<CustomField>
    <fullName>NATT_Install_Date__c</fullName>
    <description>Warranty Start Date (when the unit was installed). This will be blank for stock units. This will be updated upon registration</description>
    <label>Install Date</label>
    <type>Date</type>
</CustomField>