NATTQA-ENV/force-app/main/default/objects/NATT_Inventory__c/fields/NATT_Item__c.field-meta.xml
<CustomField>
    <fullName>NATT_Item__c</fullName>
    <description>Model number of the product.</description>
    <label>Warranty Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>