NATTQA-ENV/force-app/main/default/objects/NATT_Inventory__c/fields/NATT_JobNumber__c.field-meta.xml
<CustomField>
    <fullName>NATT_JobNumber__c</fullName>
    <description>Unit Sales Order Number</description>
    <label>Job Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>