NATTQA-ENV/force-app/main/default/objects/NATT_Inventory__c/fields/NATT_Manufacturing_Date__c.field-meta.xml
<CustomField>
    <fullName>NATT_Manufacturing_Date__c</fullName>
    <description>When the Unit has completed the &apos;crating&apos; process</description>
    <label>Manufacturing Date</label>
    <type>Date</type>
</CustomField>