NATTQA-ENV/force-app/main/default/objects/NATT_Inventory__c/fields/NATT_Model_Number__c.field-meta.xml
<CustomField>
    <fullName>NATT_Model_Number__c</fullName>
    <description>used when quoting aftermarket or extensions</description>
    <label>Model Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>