NATTQA-ENV/force-app/main/default/objects/NATT_Inventory__c/fields/NATT_Original_Price__c.field-meta.xml
<CustomField>
    <fullName>NATT_Original_Price__c</fullName>
    <label>Original Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>