NATTQA-ENV/force-app/main/default/objects/NATT_Inventory__c/fields/NATT_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>NATT_Serial_Number__c</fullName>
    <description>Asset serial number of the manufactured product</description>
    <externalId>true</externalId>
    <label>Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>