NATTQA-ENV/force-app/main/default/objects/NATT_Inventory__c/fields/NATT_Shipment_Date__c.field-meta.xml
<CustomField>
    <fullName>NATT_Shipment_Date__c</fullName>
    <description>When the unit has shipped out of Athens</description>
    <label>Shipment Date</label>
    <type>Date</type>
</CustomField>