NATTQA-ENV/force-app/main/default/objects/NATT_Inventory__c/fields/NATT_Standard_Warranty_Code__c.field-meta.xml
<CustomField>
    <fullName>NATT_Standard_Warranty_Code__c</fullName>
    <description>Standard warranty document (Assigned by JDE)</description>
    <label>Standard Warranty Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>