NATTQA-ENV/force-app/main/default/objects/NATT_Inventory__c/fields/NATT_Type__c.field-meta.xml
<CustomField>
    <fullName>NATT_Type__c</fullName>
    <description>&apos;Stock&apos; or &apos;Retail&apos;</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Stock</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>